--- a/index.html
+++ b/index.html
@@ -1,75 +1,99 @@
 <!doctype html>
 <html>
   <head>
-    <title>Auriga</title>
+    <title>Auriga | A visual language for role-playing and strategy games</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i|Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="twelve column">
 
-    <h1>Auriga</h1>
+          <div class="logo">
+            <!-- <img src="auriga.svg"> -->
+            <h1>Auriga</h1>
+          </div>
 
-    <h2>Character profile</h2>
 
-    <section class="char-profile">
+          <p>As a kid, I grew up playing a lot of RPG and strategy games. Far and away, they were my favorite games. They still are. Games like <a href="https://en.wikipedia.org/wiki/Dragon_Force">Dragon Force</a>, <a href="https://en.wikipedia.org/wiki/Final_Fantasy_Tactics">Final Fantasy Tactics</a> and <a href="https://en.wikipedia.org/wiki/Tactics_Ogre:_Let_Us_Cling_Together">Tactics Ogre</a> have a special place in my heart.</p>
+      
+          <p>Auriga is a visual language for an imaginary (or yet to be developed?) role-playing and strategy game. It is a series of user interface elements typically found in RPGs. Stuff like character profiles, item descriptions and dialogue components - all working together to create the style of a medieval western world. It's inspired by a lot of older games, but it's built using pretty modern CSS techniques. It makes heavy use of <a href="">CSS grid</a> and other features which haven't been widely adopted, so it's currently meant to be viewed only in modern browsers.</p>
 
-      <figure class="img">
-        <img src="https://place-hold.it/200" alt="" title="" />
-      </figure>
+          <p>One day, I might get around to developing the game itself.</p>
 
-      <span class="lvl">Level</span>
+          <p>
+            <small>Tested on latest Chrome (v70).</small>
+          </p>
 
-      <span class="exp">Exp</span>
-      <progress class="exp-progress" value="22" max="100"></progress>
-
-      <h1 class="name">Delita Heiral</h1>
-      <h2 class="job">Arithmetician</h2>
-
-      <span class="hp">HP</span>
-      <meter class="hp-meter" value="4" min="0" max="10"></meter>
-
-      <span class="mp">MP</span>
-      <meter class="mp-meter" value="7" min="0" max="10"></meter>
-
-    </section>
-
-    <!-- <h2>Turn display</h2>
-
-    <section id="turn-display">
-
-      <div class="turn-icon">
-          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" style="enable-background:new 0 0 100 100;" xml:space="preserve"><g><path d="M61.9,34.5H38.1c1.7,2.3,4,4.4,6.9,6l0.4,0.2c2.1,1.2,3.7,3,4.6,5.1c0.9-2.1,2.5-3.9,4.6-5.1l0.4-0.2   C57.9,38.8,60.2,36.7,61.9,34.5z"/><path d="M50,54.2c-0.9,2.1-2.5,3.9-4.6,5.1L45,59.5c-6.4,3.7-10.2,9.6-10.2,15.9v4h30.6v-4c0-6.3-3.8-12.3-10.2-15.9l-0.4-0.2   C52.5,58,50.9,56.2,50,54.2z"/><path d="M58.6,47.6l0.4-0.2c8.9-5.1,14.3-13.7,14.3-22.8v-7.8h1.3c1.8,0,3.3-1.5,3.3-3.3v0c0-1.8-1.5-3.3-3.3-3.3H25.4   c-1.8,0-3.3,1.5-3.3,3.3v0c0,1.8,1.5,3.3,3.3,3.3h1.3v7.8c0,9.2,5.4,17.7,14.3,22.8l0.4,0.2c2,1.1,2,3.6,0,4.7L41,52.5   c-8.9,5.1-14.3,13.7-14.3,22.8v8h-1.3c-1.8,0-3.3,1.5-3.3,3.3v0c0,1.8,1.5,3.3,3.3,3.3h49.2c1.8,0,3.3-1.5,3.3-3.3v0   c0-1.8-1.5-3.3-3.3-3.3h-1.3v-8c0-9.2-5.4-17.7-14.3-22.8l-0.4-0.2C56.6,51.2,56.6,48.7,58.6,47.6z M56.6,55.8L57,56   c7.7,4.4,12.3,11.6,12.3,19.4v8H30.7v-8c0-7.8,4.6-15,12.3-19.4l0.4-0.2c2.2-1.2,3.5-3.4,3.5-5.8s-1.3-4.6-3.5-5.8L43,43.9   c-7.7-4.4-12.3-11.6-12.3-19.4v-7.8h38.5v7.8c0,7.8-4.6,15-12.3,19.4l-0.4,0.2c-2.2,1.2-3.5,3.4-3.5,5.8S54.4,54.5,56.6,55.8z"/></g></svg>
+        </div>
       </div>
 
-      <progress class="turn-timeline" value="22" max="100"></progress>
+      <div class="row">
+        <div class="twelve column">
 
-    </section> -->
+          <div class="your-class">
 
-    <h2>Dialogue box (left)</h2>
+            <!-- character profile -->
+            <section class="char-profile loose border-solid">
 
-    <section class="dialogue-box">
+              <figure class="img">
+                <img src="https://place-hold.it/136x220" alt="" title="" />
+              </figure>
 
-      <figure class="dialogue-img">
-        <img src="https://place-hold.it/150x200" alt="" title="" />
-      </figure>
-      <h3 class="dialogue-char">Emperor Junon</h3>
-      <p class="dialogue-text">Attack me if you dare! But I should warn you, I'm a demon on the battlefield. You'd best be ready.</p>
+              <h1 class="name">Delita Heiral</h1>
+              <h2 class="job">Arithmetician</h2>
 
-    </section>
-<!-- 
-    <h2>Dialogue box (right)</h2>
+              <div class="lvl">
+                <span>Lvl</span>
+                <span class="number">23</span>
+                <progress value="22" min="0" max="100"></progress>
+              </div>
 
-    <section class="dialogue-box">
+              <div class="hp">
+                <span>HP</span>
+                <meter value="4" min="0" max="10" low="2" high="8" optimum="10"></meter>
+              </div>
 
-      <figure class="dialogue-img">
-        <img src="https://place-hold.it/150x200" alt="" title="" />
-      </figure>
-      <h3 class="dialogue-char">Emperor Mikhal</h3>
-      <p class="dialogue-text">Rust hasn't broken this arm yet. Are you prepared?</p>
+              <div class="mp">
+                <span>MP</span>
+                <meter value="7" min="0" max="10" low="2" high="8" optimum="10"></meter>
+              </div>
 
-    </section> -->
+            </section>
 
+            <!-- dialogue box -->
+            <section class="dialogue-box loose border-solid">
+              <figure class="img">
+                <img src="https://place-hold.it/136x220" alt="" title="" />
+              </figure>
+              <h3 class="name">Emperor Junon</h3>
+              <p class="text">Attack me if you dare! But I should warn you, I'm a demon on the battlefield. You'd best be ready.</p>
+            </section>
 
+            <!-- item profile -->
+            <section class="item-profile loose border-solid">
+
+              <figure class="img">
+                <img src="https://place-hold.it/150x150" alt="" title="" />
+              </figure>
+              <h3 class="name">Ivy flower powder</h3>
+              <p class="description">The ivy flower is ground up and developed into powder, which is used to poison enemies. Neurotoxic and haemotoxic, the poison slowly takes away the vitality of the target.</p>
+
+            </section>
+        </div>
+      </div>
+    </div>
+
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('.your-class').slick();
+      });
+    </script>
   </body>
 </html>
